--- a/app/src/main/res/layout/activity_relative.xml
+++ b/app/src/main/res/layout/activity_relative.xml
@@ -1,39 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:orientation="vertical"
+    android:paddingStart="16dp"
     tools:context=".RelativeActivity">
 
-    <TextView
-        android:id="@+id/tv_destination"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Destination Guide"
-        android:textAllCaps="true"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_1"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:layout_below="@id/tv_destination"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:src="@color/black" />
+        <include
+            android:id="@+id/include_guidline_1"
+            layout="@layout/layout_pertama"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <ImageView
-        android:id="@+id/iv_2"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:layout_below="@id/tv_destination"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:layout_toRightOf="@id/iv_1"
-        android:src="@color/black" />
+        <include
+            android:id="@+id/include_guidline_2"
+            layout="@layout/layout_ketiga"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <include
+            android:id="@+id/include_guidline_3"
+            layout="@layout/layout_kelima"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+
+    </LinearLayout>
+
+</ScrollView>
